test/classes/initializers/errors/errHandling/initWithTryBangCatch.good
initWithTryBangCatch.chpl:7: In initializer:
initWithTryBangCatch.chpl:8: error: Only catch-less try! statements are allowed in initializers for now
